// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todo component matches checked snapshot 1`] = `
<div>
  <li
    aria-label="todo"
    class="noselect list-group-item list-group-item-action d-flex align-items-center justify-content-between list-group-item-warning"
    tabindex="0"
  >
    <span
      aria-label="checked"
    >
      <svg
        class="bi bi-check2"
        fill="currentColor"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      my todo text
    </span>
    <span
      aria-label="delete-todo"
      tabindex="0"
    >
      <svg
        class="bi bi-trash-fill"
        fill="currentColor"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </li>
</div>
`;

exports[`todo component matches unchecked snapshot 1`] = `
<div>
  <li
    aria-label="todo"
    class="noselect list-group-item list-group-item-action d-flex align-items-center justify-content-between"
    tabindex="0"
  >
    <span
      aria-label="unchecked"
      style="padding-right: 16px;"
    />
    <span>
      my todo text
    </span>
    <span
      aria-label="delete-todo"
      tabindex="0"
    >
      <svg
        class="bi bi-trash-fill"
        fill="currentColor"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </li>
</div>
`;
